# mingw_w64-qt5_static-cmake-console-example

./: CMakeLists.txt  README.md
src/: main.cpp
